force-app/main/default/objects/Shipment_Lot__c/Shipment_Lot__c.object-meta.xml
<CustomObject>
    <description>Physical lot / consignment shipped for an Order, optionally from a Fulfillment Order.</description>
    <label>Shipment Lot</label>
    <nameField>
        <displayFormat>LOT-{00000}</displayFormat>
        <label>Lot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Lots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>