force-app/main/default/objects/Shipment_Lot__c/fields/External_Lot_No__c.field-meta.xml
<CustomField>
    <fullName>External_Lot_No__c</fullName>
    <label>External Lot No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>