force-app/main/default/objects/Shipment_Lot__c/fields/Fulfillment_Order__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional fulfillment order this lot was packed from.</description>
    <label>Fulfillment Order</label>
    <referenceTo>Fulfillment_Order__c</referenceTo>
    <relationshipLabel>Shipment Lots</relationshipLabel>
    <relationshipName>Shipment_Lots</relationshipName>
    <type>Lookup</type>
</CustomField>