force-app/main/default/objects/Shipment_Lot__c/fields/Package_Count__c.field-meta.xml
<CustomField>
    <fullName>Package_Count__c</fullName>
    <label>Package Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>