force-app/main/default/objects/Shipment_Lot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Fulfillment_Order__c</columns>
    <columns>Status__c</columns>
    <columns>Ship_Date__c</columns>
    <columns>Tracking_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>